--- a/EHCE_blog/posts/Area/index.qmd
+++ b/EHCE_blog/posts/Area/index.qmd
@@ -18,6 +18,7 @@ library(pscl)
 library(reshape2)
 library(data.table)
 library(broom)
+library(DescTools)
 ```
 
 ### Loading the base spatail data set including Counties and States boundaires
@@ -238,4 +239,51 @@ ggplot() +
   labs(fill = "Area ECE") +
   theme_void() + 
   theme(legend.position = "bottom")
+```
+
+### State Level Analysis for EHE
+
+```{r}
+state_ehe_dat = dat_area_ehe %>% 
+  select(year_numerical, STATE_NAME, avg_impacted_to_total_ratio) 
+
+lm_state_area_ehe <- state_ehe_dat %>%
+  group_by(STATE_NAME) %>%
+  do(model = lm(avg_impacted_to_total_ratio ~ year_numerical, data = .))
+
+slopes_state_ehe <- lm_state_area_ehe %>%
+  rowwise() %>%
+  mutate(slope = coef(model)[["year_numerical"]],
+         p_value = summary(model)$coefficients["year_numerical","Pr(>|t|)"],
+         r_squared = glance(model)$r.squared)
+
+gini_coef = slopes_ehe %>%
+  group_by(STATE_NAME) %>%
+  summarise(Gini_coef = Gini(slope))
+```
+
+#### Map
+
+```{r}
+# Merge with geometry data
+state_boundaris_ehe_catalog <- merge(states_geo,
+          slopes_state_ehe %>% st_drop_geometry(),
+          by.x="STATE_NAME",
+          by.y="STATE_NAME",
+          all.x = TRUE,
+          all.y = TRUE,
+          suffix = c("","_sp")) %>% st_as_sf() 
+# Area ECE map
+ggplot() +
+  geom_sf(data = state_boundaris_ehe_catalog,
+            aes(fill = slope), color = NA,
+            lwd = .1) + 
+  scale_fill_distiller(palette = "RdBu", 
+                       limits = c(-0.071, 0.071)
+                       ) +
+  geom_sf(data = states_geo, fill = NA, color = "grey", size = 0.5) +
+  labs(fill = "State Area EHE") +
+  theme_void() + 
+  theme(legend.position = "bottom")
+
 ```
