--- a/EHCE_blog/posts/Frequency/index.qmd
+++ b/EHCE_blog/posts/Frequency/index.qmd
@@ -22,6 +22,7 @@ library(DescTools)
 library(MASS)
 library(ggridges)
 library(purrr)
+library(leaflet)
 ```
 
 ### Loading the base spatail data set including Counties and States boundaires
@@ -89,6 +90,53 @@ avg_total_area <- dat_table %>%
   summarize(avg_total_area_sq_mile = mean(total_area_sq_mile))
 event_count_all = merge(event_count_all, avg_total_area, 
                          by = c("GEOID", "NAME", "STATE_NAME"), all = TRUE)
+
+event_count_all = event_count_all %>% 
+  group_by(GEOID, NAME, STATE_NAME) %>%
+  mutate(mean_event_count = mean(event_count),
+         sd = sd(event_count),
+         outlier_upper = mean_event_count + 3*sd,
+         outlier_lower = mean_event_count - 3*sd ) %>%
+  mutate(event_count_outlier_rm = 
+           ifelse((event_count>=outlier_lower&event_count<=outlier_upper), event_count, 0))
+nrow(event_count_all %>% filter(event_count != event_count_outlier_rm))
+
+```
+
+### Season aggregation
+
+```{r}
+## Frequency summary by season
+frequency_by_season = dat_table %>%
+  mutate(season = ifelse((month(event_date) > 4 & month(event_date) < 10) | 
+                       (month(event_date) == 4 & day(event_date) > 15) | 
+                       (month(event_date) == 10 & day(event_date) < 15), "heat", "cold")) %>%
+  group_by(GEOID, NAME, STATE_NAME, year_numerical,season) %>%
+  summarize(event_count = n())
+
+# Cold season
+frequency_by_season_cold = frequency_by_season %>%
+  filter(season == "cold")
+frequency_by_season_cold <- merge(year_geoid_combinations, frequency_by_season_cold, 
+                         by = c("year_numerical", "GEOID"), all = TRUE)
+frequency_by_season_cold["event_count"] <- lapply(frequency_by_season_cold["event_count"], function(x) ifelse(is.na(x), 0, x))
+frequency_by_season_cold["season"] <- lapply(frequency_by_season_cold["season"], function(x) ifelse(is.na(x), "cold", x))
+frequency_by_season_cold <- fill_na_with_lookup(frequency_by_season_cold, lookup_table, "NAME")
+frequency_by_season_cold <- fill_na_with_lookup(frequency_by_season_cold, lookup_table, "STATE_NAME")
+
+# Heat season
+frequency_by_season_heat = frequency_by_season %>%
+  filter(season == "heat")
+frequency_by_season_heat <- merge(year_geoid_combinations, frequency_by_season_heat, 
+                         by = c("year_numerical", "GEOID"), all = TRUE)
+frequency_by_season_heat["event_count"] <- lapply(frequency_by_season_heat["event_count"], function(x) ifelse(is.na(x), 0, x))
+frequency_by_season_heat["season"] <- lapply(frequency_by_season_heat["season"], function(x) ifelse(is.na(x), "heat", x))
+frequency_by_season_heat <- fill_na_with_lookup(frequency_by_season_heat, lookup_table, "NAME")
+frequency_by_season_heat <- fill_na_with_lookup(frequency_by_season_heat, lookup_table, "STATE_NAME")
+
+frequency_by_season = rbind(frequency_by_season_heat, frequency_by_season_cold)
+
+write.csv(frequency_by_season, "~/Desktop/frequency_season.csv")
 ```
 
 #### Average counts by county
@@ -109,8 +157,8 @@ avg_dat = dat_table %>%
   summarize(event_count = n(),
             avg_count_per_year = event_count/15,
             avg_total_area_100_sq_mile = mean(total_area_sq_mile)/100)%>%
-  mutate(avg_counts = avg_count_per_year/avg_total_area_100_sq_mile) %>% 
-  distinct()
+  mutate(avg_counts = avg_count_per_year/avg_total_area_100_sq_mile) 
+
 
 # map
 avg_dat_map = avg_dat %>% 
@@ -141,7 +189,7 @@ avg_dat_map = avg_dat %>%
 
 #avg_dat_ex = avg_dat %>% filter(STATE_NAME != "Virginia")
 county_boundaries_catalog_all_counts <- merge(counties_geo,
-          avg_dat_map %>% st_drop_geometry(),
+          avg_dat %>% st_drop_geometry(),
           by.x="GEOID",
           by.y="GEOID",
           all.x = TRUE,
@@ -168,7 +216,7 @@ print(p_count_all_map)
 dev.off()
 ```
 
-#### Poisson regression
+#### NB regression
 
 For each county, a poisson regression model is used to analyze the percentage changes by year.
 
@@ -178,30 +226,53 @@ For each county, a poisson regression model is used to analyze the percentage ch
 #  do(model = glm(event_count ~ year_numerical + 
 #                    offset(log(avg_total_area_sq_mile)), family = poisson(), data = .))
 
-nb_all_area_freq <- event_count_all %>%
-  group_by(GEOID, NAME, STATE_NAME) %>%
-  do(model = MASS::glm.nb(event_count ~ year_numerical + 
-                            offset(log(avg_total_area_sq_mile)), data = .))
+#nb_all_area_freq <- event_count_all %>%
+#  group_by(GEOID, NAME, STATE_NAME) %>%
+#  do(model = MASS::glm.nb(event_count_outlier_rm ~ year_numerical + 
+#                            offset(log(avg_total_area_sq_mile)), data = .))
 
 # Calculating slopes, percentage changes, and evaluation metrics including goodness of fit and p-values
-slopes_all_area_adj <- nb_all_area_freq %>%
-  rowwise() %>%
-  mutate(
-    slope = coef(model)[["year_numerical"]],
-    percentage_change = (exp(slope) - 1) * 100,
-    p_value = summary(model)$coefficients["year_numerical","Pr(>|z|)"],
-    residual_deviance = deviance(model),
-    df_residual = df.residual(model),
-    deviance_ratio = residual_deviance / df_residual,  # Ratio of residual deviance to degrees of freedom
-    dispersion = sum(residuals(model, type = "pearson")^2) / df_residual,  # Dispersion parameter
-    aic = AIC(model),bic = BIC(model)
-  ) %>%
-  ungroup() %>%
-  dplyr::select(GEOID, NAME, STATE_NAME, slope, percentage_change,p_value,
-         residual_deviance, df_residual, 
-         deviance_ratio, dispersion, aic,bic)
+#slopes_all_area_adj <- nb_all_area_freq %>%
+#  rowwise() %>%
+#  mutate(
+#    slope = coef(model)[["year_numerical"]],
+#    percentage_change = (exp(slope) - 1) * 100,
+#    p_value = summary(model)$coefficients["year_numerical","Pr(>|z|)"],
+#    residual_deviance = deviance(model),
+#    df_residual = df.residual(model),
+#    deviance_ratio = residual_deviance / df_residual,  
+#    dispersion = sum(residuals(model, type = "pearson")^2) / df_residual,  
+#    aic = AIC(model),bic = BIC(model)
+#  ) %>%
+#  ungroup() %>%
+#  dplyr::select(GEOID, NAME, STATE_NAME, slope, percentage_change,p_value,
+#         residual_deviance, df_residual, 
+#         deviance_ratio, dispersion, aic,bic)
 
-slopes_all_area_adj = slopes_all_area_adj %>%
+slopes_all <- event_count_all %>%
+  group_by(GEOID, NAME, STATE_NAME) %>%
+  do({
+    # Fit the Negative Binomial model
+    tryCatch({
+      model = MASS::glm.nb(event_count_outlier_rm ~ year_numerical + 
+                            offset(log(avg_total_area_sq_mile)), data = .)
+      coef_model = coef(model)["year_numerical"]
+      percentage_change = (exp(coef_model) - 1) * 100
+      p_values = summary(model)$coefficients["year_numerical", "Pr(>|z|)"]
+      aic_value = AIC(model)
+      bic_value = BIC(model)
+
+      data.frame(coef = coef_model, percentage_change, p_value = p_values, 
+                 AIC = aic_value, BIC = bic_value)
+    }, error = function(e) {
+      # Return NA in case of an error
+      data.frame(coef = NA, percentage_change = NA, p_value = NA, 
+                 AIC = NA, BIC = NA)
+    })
+  })
+
+slopes_all_cut = slopes_all %>% filter(abs(percentage_change) < 45)
+slopes_all_cut = slopes_all_cut %>%
   mutate(percentage_change_cat = case_when(
     percentage_change < -10 ~ "<-10%",
     percentage_change >=-10 & percentage_change<= -5 ~ "-10 - -5%",
@@ -230,6 +301,73 @@ slopes_all_area_adj = slopes_all_area_adj %>%
 #  }
 #}
 
+```
+
+#### ZINB + NB model
+
+```{r}
+zeroinfl_all = event_count_all %>% group_by(GEOID, NAME, STATE_NAME) %>%
+  filter((first(event_count_outlier_rm) == 0) | (sum(event_count_outlier_rm == 0) > 5)) %>%
+  ungroup() 
+slopes_all_zinb_area_adj <- zeroinfl_all %>%
+  group_by(GEOID, NAME, STATE_NAME) %>%
+  do({
+    # Fit the Negative Binomial model
+    tryCatch({
+      model = zeroinfl(event_count_outlier_rm ~ year_numerical | 1 + 
+                            offset(log(avg_total_area_sq_mile)), data = .,
+                       dist = "negbin")
+      coef_model = coef(model)[2]
+      percentage_change = (exp(coef_model) - 1) * 100
+
+      data.frame(coef = coef_model, percentage_change)
+    }, error = function(e) {
+      # Return NA in case of an error
+      data.frame(coef = NA, percentage_change = NA)
+    })
+  })
+
+nb_all = event_count_all[!(event_count_all$GEOID %in% zeroinfl_all$GEOID),]
+slope_all_nb = slopes_all[slopes_all$GEOID %in% nb_all$GEOID,]
+
+slope_all_combine = rbind(slopes_all_zinb_area_adj, slope_all_nb)
+slope_all_combinel_cut = slope_all_combine %>% filter(abs(percentage_change) < 45)
+slope_all_combinel_cut = slope_all_combinel_cut %>%
+  mutate(percentage_change_cat = case_when(
+    percentage_change < -10 ~ "<-10%",
+    percentage_change >=-10 & percentage_change<= -5 ~ "-10 - -5%",
+    percentage_change >-5 & percentage_change<= -1 ~ "-5 - -1%",
+    percentage_change >-1 & percentage_change<= 0 ~ "-1-0%",
+    percentage_change >0 & percentage_change<= 1 ~ "0-1%",
+    percentage_change >1 & percentage_change <= 5 ~ "1-5%",
+    percentage_change >5 & percentage_change <= 10 ~ "5-10%", 
+    percentage_change > 10 ~ ">10%"
+  )) %>%
+  mutate(percentage_change_cat = factor(percentage_change_cat, 
+                                        levels = c("<-10%","-10 - -5%","-5 - -1%",
+                                                   "-1-0%","0-1%",
+                                                   "1-5%", "5-10%", ">10%")))
+
+county_boundaris_all_catalog <- merge(counties_geo,
+          slope_all_combinel_cut %>% st_drop_geometry(),
+          by.x="GEOID",
+          by.y="GEOID",
+          all.x = TRUE,
+          all.y = TRUE,
+          suffix = c("","_sp")) %>% st_as_sf() 
+
+
+p_combine_all = ggplot() +
+  geom_sf(data = county_boundaris_all_catalog,
+            aes(fill = percentage_change_cat), color = NA,
+            lwd = .1) + 
+  scale_fill_manual(values = palette, na.translate = F) +
+  geom_sf(data = states_geo, fill = NA, color = "black", size = 0.1) +
+  labs(fill = "Percentage Change in EHCE Frequency (two models)") +
+  theme_void() + 
+  theme(legend.position = "bottom")
+
+p_combine_all
 ```
 
 #### Model Selection
@@ -284,7 +422,6 @@ model_comparison_table1 <- event_count_all %>%
 
 ```{r}
 # Merge with geometry data
-slopes_all_cut = slopes_all_area_adj %>% filter(abs(percentage_change) < 45)
 county_boundaries_catalog_all <- merge(counties_geo,
           slopes_all_cut %>% st_drop_geometry(),
           by.x="GEOID",
@@ -321,6 +458,57 @@ png("~/Desktop/ehe_ece_data_integration/Frequency_maps/perc_change_all.png",
     height = 5, width = 7, res = 300, units = "in")
 print(p_perc_change_all)
 dev.off()
+```
+
+#### Interactive map
+
+```{r}
+pal <- colorNumeric(palette = magma(256, direction = -1), 
+                    domain = county_boundaries_catalog_all$percentage_change)
+pal_cat <- colorFactor(palette = rev(brewer.pal(8, "PuOr")), 
+                   domain = county_boundaries_catalog_all$percentage_change_cat,
+                   na.color=rgb(0,0,0,0))
+
+county_boundaries_catalog_all_trans <- st_transform(county_boundaries_catalog_all, crs = 4326)
+state_boundaris_catalog <- st_transform(states_geo, crs = 4326)
+labels <- sprintf(
+  "<strong>%s</strong><br/>%g ",
+  county_boundaries_catalog_all$NAME, 
+  county_boundaries_catalog_all$percentage_change) %>% 
+  lapply(htmltools::HTML)
+overall_interactive_plot <- leaflet(county_boundaries_catalog_all_trans) %>%
+  addProviderTiles(providers$OpenStreetMap) %>% 
+  addPolygons(data = state_boundaris_catalog,
+              fillColor = NA,  
+              weight = 2,
+              color = "#000",  
+              fillOpacity = 0) %>% 
+  addPolygons(fillColor = ~pal_cat(percentage_change_cat),
+              weight = 1,
+              opacity = 1,
+              color = "#888",
+              dashArray = "3",
+              fillOpacity = 0.7,
+              highlightOptions = highlightOptions(
+                weight = 3,
+                color = "#555",
+                dashArray = "",
+                fillOpacity = 0.8,
+                bringToFront = TRUE),
+              label = labels,
+              labelOptions = labelOptions(
+                style = list("font-weight" = "normal", padding = "3px 8px"),
+                textsize = "15px",
+                direction = "auto")) %>%
+  addLegend(pal = pal_cat, values = ~percentage_change_cat, opacity = 0.7, title = NULL,
+  position = "bottomright",na.label = "") %>%
+  addControl(
+    html = "<strong>Percentage Change in EHCE Frequency</strong>",
+    position = "bottomleft",
+    className = "map-title"
+)
+
+overall_interactive_plot
 ```
 
 #### Prediction
@@ -367,6 +555,8 @@ predictions_2025_with_ci <-nb_reg_model %>%
 
 ### Extreme Heat Events
 
+#### NB only Model
+
 ```{r, message=FALSE, warning=FALSE}
 event_count_ehe <- dat_table %>%
   filter(event_type == "Extreme Heat Event") %>%
@@ -385,30 +575,62 @@ avg_total_area_ehe <- dat_table %>%
 event_count_ehe = merge(event_count_ehe, avg_total_area_ehe, 
                          by = c("GEOID", "NAME", "STATE_NAME"), all = TRUE)
 
-# Poisson Regression
-poisson_ehe_area_adj <- event_count_ehe %>%
+event_count_ehe = event_count_ehe %>% 
   group_by(GEOID, NAME, STATE_NAME) %>%
-  do(model = MASS::glm.nb(event_count ~ year_numerical + 
-                            offset(log(avg_total_area_sq_mile)), data = .))
+  mutate(mean_event_count = mean(event_count),
+         sd = sd(event_count),
+         outlier_upper = mean_event_count + 3*sd,
+         outlier_lower = mean_event_count - 3*sd ) %>%
+  mutate(event_count_outlier_rm = 
+           ifelse((event_count>=outlier_lower&event_count<=outlier_upper), event_count, 0))
+nrow(event_count_ehe %>% filter(event_count != event_count_outlier_rm))
 
-slopes_ehe_poi_area_adj <- poisson_ehe_area_adj %>%
-  rowwise() %>%
-  mutate(
-    slope = coef(model)[["year_numerical"]],
-    percentage_change = (exp(slope) - 1) * 100,
-    p_value = summary(model)$coefficients["year_numerical","Pr(>|z|)"],
-    residual_deviance = deviance(model),
-    df_residual = df.residual(model),
-    deviance_ratio = residual_deviance / df_residual,  # Ratio of residual deviance to degrees of freedom
-    dispersion = sum(residuals(model, type = "pearson")^2) / df_residual,  # Dispersion parameter
-    aic = AIC(model), bic = BIC(model)
-  ) %>%
-  ungroup() %>%
-  dplyr::select(GEOID, NAME, STATE_NAME, slope, percentage_change,p_value,
-         residual_deviance, df_residual, 
-         deviance_ratio, dispersion, aic,bic)
+# NB Regression
+#poisson_ehe_area_adj <- event_count_ehe %>%
+#  group_by(GEOID, NAME, STATE_NAME) %>%
+#  do(model = MASS::glm.nb(event_count_outlier_rm ~ year_numerical + 
+#                            offset(log(avg_total_area_sq_mile)), data = .))
 
-slopes_ehe_poi_area_adj = slopes_ehe_poi_area_adj %>%
+#slopes_ehe_poi_area_adj <- poisson_ehe_area_adj %>%
+#  rowwise() %>%
+#  mutate(
+#    slope = coef(model)[["year_numerical"]],
+#    percentage_change = (exp(slope) - 1) * 100,
+#    p_value = summary(model)$coefficients["year_numerical","Pr(>|z|)"],
+#    residual_deviance = deviance(model),
+#    df_residual = df.residual(model),
+#    deviance_ratio = residual_deviance / df_residual,  
+#    dispersion = sum(residuals(model, type = "pearson")^2) / df_residual,  
+#    aic = AIC(model), bic = BIC(model)
+#  ) %>%
+#  ungroup() %>%
+#  dplyr::select(GEOID, NAME, STATE_NAME, slope, percentage_change,p_value,
+#         residual_deviance, df_residual, 
+#         deviance_ratio, dispersion, aic,bic)
+
+slopes_ehe_poi_area_adj <- event_count_ehe %>%
+  group_by(GEOID, NAME, STATE_NAME) %>%
+  do({
+    # Fit the Negative Binomial model
+    tryCatch({
+      model = MASS::glm.nb(event_count_outlier_rm ~ year_numerical + 
+                            offset(log(avg_total_area_sq_mile)), data = .)
+      coef_model = coef(model)["year_numerical"]
+      percentage_change = (exp(coef_model) - 1) * 100
+      p_values = summary(model)$coefficients["year_numerical", "Pr(>|z|)"]
+      aic_value = AIC(model)
+      bic_value = BIC(model)
+
+      data.frame(coef = coef_model, percentage_change, p_value = p_values, 
+                 AIC = aic_value, BIC = bic_value)
+    }, error = function(e) {
+      # Return NA in case of an error
+      data.frame(coef = NA, percentage_change = NA, p_value = NA, 
+                 AIC = NA, BIC = NA)
+    })
+  })
+slopes_ehe_cut = slopes_ehe_poi_area_adj %>% filter(abs(percentage_change) < 45)
+slopes_ehe_cut = slopes_ehe_cut %>%
   mutate(percentage_change_cat = case_when(
     percentage_change < -10 ~ "<-10%",
     percentage_change >=-10 & percentage_change<= -5 ~ "-10 - -5%",
@@ -429,6 +651,73 @@ slopes_ehe_poi_area_adj = slopes_ehe_poi_area_adj %>%
 hist(slopes_ehe_poi_area_adj$p_value)
 hist(slopes_ehe_poi_area_adj$percentage_change)
 hist(slopes_ehe_poi_area_adj$aic)
+```
+
+#### ZINB + NB model
+
+```{r}
+zeroinfl_ehe = event_count_ehe %>% group_by(GEOID, NAME, STATE_NAME) %>%
+  filter((first(event_count_outlier_rm) == 0) | (sum(event_count_outlier_rm == 0) > 5)) %>%
+  ungroup() 
+slopes_ehe_zinb_area_adj <- zeroinfl_ehe %>%
+  group_by(GEOID, NAME, STATE_NAME) %>%
+  do({
+    # Fit the Negative Binomial model
+    tryCatch({
+      model = zeroinfl(event_count_outlier_rm ~ year_numerical | 1 + 
+                            offset(log(avg_total_area_sq_mile)), data = .,
+                       dist = "negbin")
+      coef_model = coef(model)[2]
+      percentage_change = (exp(coef_model) - 1) * 100
+
+      data.frame(coef = coef_model, percentage_change)
+    }, error = function(e) {
+      # Return NA in case of an error
+      data.frame(coef = NA, percentage_change = NA)
+    })
+  })
+
+nb_ehe = event_count_ehe[!(event_count_ehe$GEOID %in% zeroinfl_ehe$GEOID),]
+slope_ehe_nb = slopes_ehe_poi_area_adj[slopes_ehe_poi_area_adj$GEOID %in% nb_ehe$GEOID,]
+
+slope_ehe_combine = rbind(slopes_ehe_zinb_area_adj, slope_ehe_nb)
+slope_ehe_combine_cut = slope_ehe_combine %>% filter(abs(percentage_change) < 45)
+slope_ehe_combine_cut = slope_ehe_combine_cut %>%
+  mutate(percentage_change_cat = case_when(
+    percentage_change < -10 ~ "<-10%",
+    percentage_change >=-10 & percentage_change<= -5 ~ "-10 - -5%",
+    percentage_change >-5 & percentage_change<= -1 ~ "-5 - -1%",
+    percentage_change >-1 & percentage_change<= 0 ~ "-1-0%",
+    percentage_change >0 & percentage_change<= 1 ~ "0-1%",
+    percentage_change >1 & percentage_change <= 5 ~ "1-5%",
+    percentage_change >5 & percentage_change <= 10 ~ "5-10%", 
+    percentage_change > 10 ~ ">10%"
+  )) %>%
+  mutate(percentage_change_cat = factor(percentage_change_cat, 
+                                        levels = c("<-10%","-10 - -5%","-5 - -1%",
+                                                   "-1-0%","0-1%",
+                                                   "1-5%", "5-10%", ">10%")))
+
+county_boundaris_ece_catalog <- merge(counties_geo,
+          slope_ehe_combine_cut %>% st_drop_geometry(),
+          by.x="GEOID",
+          by.y="GEOID",
+          all.x = TRUE,
+          all.y = TRUE,
+          suffix = c("","_sp")) %>% st_as_sf() 
+
+
+p_combine_ehe = ggplot() +
+  geom_sf(data = county_boundaris_ece_catalog,
+            aes(fill = percentage_change_cat), color = NA,
+            lwd = .1) + 
+  scale_fill_manual(values = palette, na.translate = F) +
+  geom_sf(data = states_geo, fill = NA, color = "black", size = 0.1) +
+  labs(fill = "Percentage Change in Frequency EHE (two models)") +
+  theme_void() + 
+  theme(legend.position = "bottom")
+
+p_combine_ehe
 ```
 
 #### Average Counts by County
@@ -481,7 +770,6 @@ dev.off()
 #### Map
 
 ```{r}
-slopes_ehe_cut = slopes_ehe_poi_area_adj %>% filter(abs(percentage_change) < 45)
 # Merge with geometry data
 county_boundaris_ehe_catalog <- merge(counties_geo,
           slopes_ehe_cut %>% st_drop_geometry(),
@@ -521,7 +809,57 @@ print(p_perc_change_ehe)
 dev.off()
 ```
 
+#### Interactive map
+
+```{r}
+pal_cat <- colorFactor(palette = rev(brewer.pal(8, "PuOr")), 
+                   domain = county_boundaris_ehe_catalog$percentage_change_cat)
+
+county_boundaries_catalog_ehe_trans <- st_transform(county_boundaris_ehe_catalog, crs = 4326)
+state_boundaris_catalog <- st_transform(states_geo, crs = 4326)
+
+labels_ehe <- sprintf(
+  "<strong>%s</strong><br/>%g ",
+  county_boundaris_ehe_catalog$NAME, 
+  county_boundaris_ehe_catalog$percentage_change) %>% 
+  lapply(htmltools::HTML)
+total_ehe_interactive_plot <- leaflet(county_boundaries_catalog_ehe_trans) %>%
+  addProviderTiles(providers$OpenStreetMap) %>% 
+  addPolygons(data = state_boundaris_catalog,
+              fillColor = NA,  
+              weight = 2,
+              color = "#000",  
+              fillOpacity = 0) %>% 
+  addPolygons(fillColor = ~pal_cat(percentage_change_cat),
+              weight = 1,
+              opacity = 1,
+              color = "#888",
+              dashArray = "3",
+              fillOpacity = 0.7,
+              highlightOptions = highlightOptions(
+                weight = 3,
+                color = "#555",
+                dashArray = "",
+                fillOpacity = 0.8,
+                bringToFront = TRUE),
+              label = labels_ehe,
+              labelOptions = labelOptions(
+                style = list("font-weight" = "normal", padding = "3px 8px"),
+                textsize = "15px",
+                direction = "auto")) %>%
+  addLegend(pal = pal_cat, values = ~percentage_change_cat, opacity = 0.7, title = NULL,
+  position = "bottomright",na.label = "") %>%
+  addControl(
+    html = "<strong>Percentage Change in EHE Frequency</strong>",
+    position = "bottomleft",
+    className = "map-title"
+)
+total_ehe_interactive_plot
+```
+
 ### Extreme Cold Events
+
+#### NB model only
 
 ```{r, message=FALSE, warning=FALSE}
 event_count_ece <- dat_table %>%
@@ -541,13 +879,24 @@ avg_total_area_ece <- dat_table %>%
 event_count_ece = merge(event_count_ece, avg_total_area_ece, 
                          by = c("GEOID", "NAME", "STATE_NAME"), all = TRUE)
 
+event_count_ece = event_count_ece %>% 
+  group_by(GEOID, NAME, STATE_NAME) %>%
+  mutate(mean_event_count = mean(event_count),
+         sd = sd(event_count),
+         outlier_upper = mean_event_count + 3*sd,
+         outlier_lower = mean_event_count - 3*sd ) %>%
+  mutate(event_count_outlier_rm = 
+           ifelse((event_count>=outlier_lower&event_count<=outlier_upper), event_count, 0))
+
+nrow(event_count_ece %>% filter(event_count != event_count_outlier_rm))
+
 # NB Regression
 slopes_ece_poi_area_adj <- event_count_ece %>%
   group_by(GEOID, NAME, STATE_NAME) %>%
   do({
     # Fit the Negative Binomial model
     tryCatch({
-      model = MASS::glm.nb(event_count ~ year_numerical + 
+      model = MASS::glm.nb(event_count_outlier_rm ~ year_numerical + 
                             offset(log(avg_total_area_sq_mile)), data = .)
       coef_model = coef(model)["year_numerical"]
       percentage_change = (exp(coef_model) - 1) * 100
@@ -563,12 +912,15 @@ slopes_ece_poi_area_adj <- event_count_ece %>%
                  AIC = NA, BIC = NA)
     })
   })
+
+
 #poisson_ece_area_adj <- event_count_ece %>%
 #  group_by(GEOID, NAME, STATE_NAME) %>%
 #  do(model = glm(event_count ~ year_numerical + 
 #                   offset(log(avg_total_area_sq_mile)), family = quasipoisson, data = .))
 
-slopes_ece_poi_area_adj = slopes_ece_poi_area_adj %>%
+slopes_ece_cut = slopes_ece_poi_area_adj %>% filter(abs(percentage_change) < 45)
+slopes_ece_cut = slopes_ece_cut %>%
   mutate(percentage_change_cat = case_when(
     percentage_change < -10 ~ "<-10%",
     percentage_change >=-10 & percentage_change<= -5 ~ "-10 - -5%",
@@ -583,6 +935,73 @@ slopes_ece_poi_area_adj = slopes_ece_poi_area_adj %>%
                                         levels = c("<-10%","-10 - -5%","-5 - -1%",
                                                    "-1-0%","0-1%",
                                                    "1-5%", "5-10%", ">10%")))
+```
+
+#### ZINB + NB model
+
+```{r, warning = F}
+zeroinfl_ece = event_count_ece %>% group_by(GEOID, NAME, STATE_NAME) %>%
+  filter((first(event_count_outlier_rm) == 0) | (sum(event_count_outlier_rm == 0) > 5)) %>%
+  ungroup() 
+slopes_ece_zinb_area_adj <- zeroinfl_ece %>%
+  group_by(GEOID, NAME, STATE_NAME) %>%
+  do({
+    # Fit the Negative Binomial model
+    tryCatch({
+      model = zeroinfl(event_count_outlier_rm ~ year_numerical | 1 + 
+                            offset(log(avg_total_area_sq_mile)), data = .,
+                       dist = "negbin")
+      coef_model = coef(model)[2]
+      percentage_change = (exp(coef_model) - 1) * 100
+
+      data.frame(coef = coef_model, percentage_change)
+    }, error = function(e) {
+      # Return NA in case of an error
+      data.frame(coef = NA, percentage_change = NA)
+    })
+  })
+
+nb_ece = event_count_ece[!(event_count_ece$GEOID %in% zeroinfl_ece$GEOID),]
+slope_ece_nb = slopes_ece_poi_area_adj[slopes_ece_poi_area_adj$GEOID %in% nb_ece$GEOID,]
+
+slope_ece_combine = rbind(slopes_ece_zinb_area_adj, slope_ece_nb)
+slope_ece_combine_cut = slope_ece_combine %>% filter(abs(percentage_change) < 45)
+slope_ece_combine_cut = slope_ece_combine_cut %>%
+  mutate(percentage_change_cat = case_when(
+    percentage_change < -10 ~ "<-10%",
+    percentage_change >=-10 & percentage_change<= -5 ~ "-10 - -5%",
+    percentage_change >-5 & percentage_change<= -1 ~ "-5 - -1%",
+    percentage_change >-1 & percentage_change<= 0 ~ "-1-0%",
+    percentage_change >0 & percentage_change<= 1 ~ "0-1%",
+    percentage_change >1 & percentage_change <= 5 ~ "1-5%",
+    percentage_change >5 & percentage_change <= 10 ~ "5-10%", 
+    percentage_change > 10 ~ ">10%"
+  )) %>%
+  mutate(percentage_change_cat = factor(percentage_change_cat, 
+                                        levels = c("<-10%","-10 - -5%","-5 - -1%",
+                                                   "-1-0%","0-1%",
+                                                   "1-5%", "5-10%", ">10%")))
+
+county_boundaris_ece_catalog <- merge(counties_geo,
+          slope_ece_combine_cut %>% st_drop_geometry(),
+          by.x="GEOID",
+          by.y="GEOID",
+          all.x = TRUE,
+          all.y = TRUE,
+          suffix = c("","_sp")) %>% st_as_sf() 
+
+
+p_combine_ece = ggplot() +
+  geom_sf(data = county_boundaris_ece_catalog,
+            aes(fill = percentage_change_cat), color = NA,
+            lwd = .1) + 
+  scale_fill_manual(values = palette, na.translate = F) +
+  geom_sf(data = states_geo, fill = NA, color = "black", size = 0.1) +
+  labs(fill = "Percentage Change in Frequency ECE (two models)") +
+  theme_void() + 
+  theme(legend.position = "bottom")
+
+p_combine_ece
 ```
 
 ```{r}
@@ -639,7 +1058,6 @@ dev.off()
 #### Map
 
 ```{r}
-slopes_ece_cut = slopes_ece_poi_area_adj %>% filter(abs(percentage_change) < 45)
 # Merge with geometry data
 county_boundaris_ece_catalog <- merge(counties_geo,
           slopes_ece_cut %>% st_drop_geometry(),
@@ -647,7 +1065,7 @@ county_boundaris_ece_catalog <- merge(counties_geo,
           by.y="GEOID",
           all.x = TRUE,
           all.y = TRUE,
-          suffix = c("","_sp")) %>% st_as_sf() 
+          suffix = c("","_sp")) %>% st_as_sf()      
 
 # Frequency ECE map
 #ggplot() +
@@ -677,6 +1095,54 @@ png("~/Desktop/ehe_ece_data_integration/Frequency_maps/perc_change_ece.png",
     height = 5, width = 7, res = 300, units = "in")
 print(p_perc_change_ece)
 dev.off()
+```
+
+#### Interactive map
+
+```{r}
+pal_cat <- colorFactor(palette = rev(brewer.pal(8, "PuOr")), 
+                   domain = county_boundaris_ece_catalog$percentage_change_cat)
+
+county_boundaries_catalog_ece_trans <- st_transform(county_boundaris_ece_catalog, crs = 4326)
+state_boundaris_catalog <- st_transform(states_geo, crs = 4326)
+
+labels_ece <- sprintf(
+  "<strong>%s</strong><br/>%g ",
+  county_boundaris_ece_catalog$NAME, 
+  county_boundaris_ece_catalog$percentage_change) %>% 
+  lapply(htmltools::HTML)
+total_ece_interactive_plot <- leaflet(county_boundaries_catalog_ece_trans) %>%
+  addProviderTiles(providers$OpenStreetMap) %>% 
+  addPolygons(data = state_boundaris_catalog,
+              fillColor = NA,  
+              weight = 2,
+              color = "#000",  
+              fillOpacity = 0) %>% 
+  addPolygons(fillColor = ~pal_cat(percentage_change_cat),
+              weight = 1,
+              opacity = 1,
+              color = "#888",
+              dashArray = "3",
+              fillOpacity = 0.7,
+              highlightOptions = highlightOptions(
+                weight = 3,
+                color = "#555",
+                dashArray = "",
+                fillOpacity = 0.8,
+                bringToFront = TRUE),
+              label = labels_ece,
+              labelOptions = labelOptions(
+                style = list("font-weight" = "normal", padding = "3px 8px"),
+                textsize = "15px",
+                direction = "auto")) %>%
+  addLegend(pal = pal_cat, values = ~percentage_change_cat, opacity = 0.7, title = NULL,
+  position = "bottomright",na.label = "") %>%
+  addControl(
+    html = "<strong>Percentage Change in ECE Frequency</strong>",
+    position = "bottomleft",
+    className = "map-title"
+)
+total_ece_interactive_plot
 ```
 
 ### State Level Analysis
