--- a/EHCE_blog/posts/Intensity/index.qmd
+++ b/EHCE_blog/posts/Intensity/index.qmd
@@ -45,11 +45,11 @@ dat <- readRDS(dat_path)[[1]]
 
 #### Overall intensity
 
-```{r}
+```{r, warning = FALSE}
 dat_table = dat %>%  st_drop_geometry()
 ## Adding years with no event to the dataset 
 lookup_table <- dat_table %>%
-  select(GEOID, NAME, STUSPS, STATE_NAME) %>%
+  dplyr::select(GEOID, NAME, STUSPS, STATE_NAME) %>%
   distinct() %>%
   filter(!is.na(NAME) & !is.na(STUSPS) & !is.na(STATE_NAME))
 
@@ -99,7 +99,7 @@ hist(slopes_all$r_squared)
 
 #### Map
 
-```{r}
+```{r, warning = FALSE}
 #slopes_cut = slopes_all %>% filter(!(p_value > 0.5))
 # Merge with geometry data
 county_boundaris_catalog_all <- merge(counties_geo,
@@ -114,17 +114,17 @@ ggplot() +
   geom_sf(data = county_boundaris_catalog_all,
             aes(fill = slope), color = NA,
             lwd = .1) + 
-  scale_fill_distiller(palette = "RdBu", limits = c(-2.2, 2.2)
+  scale_fill_distiller(palette = "PuOr", limits = c(-2.2, 2.2)
                        ) +
   geom_sf(data = states_geo, fill = NA, color = "grey", size = 0.01, alpha = 0.2) +
-  labs(fill = "Intensity") +
+  labs(fill = "EHCE Intensity Coefficient") +
   theme_void() + 
-  theme(legend.position = "bottom")
+  theme(legend.position = "bottom")       
 ```
 
 #### Extreme Heat Events
 
-```{r}
+```{r, warning = FALSE}
 county_heat_intensity <- dat_table %>%
   filter(event_type == "Extreme Heat Event") %>%
   group_by(GEOID,NAME, STATE_NAME, year_numerical) %>%
@@ -159,7 +159,7 @@ hist(slopes_ehe$r_squared)
 
 #### Map
 
-```{r}
+```{r, warning = FALSE}
 #slopes_ehe_cut = slopes_ehe %>% filter(p_value < 0.05)
 # Merge with geometry data
 county_boundaris_ehe_catalog <- merge(counties_geo,
@@ -174,16 +174,16 @@ ggplot() +
   geom_sf(data = county_boundaris_ehe_catalog,
             aes(fill = slope),color = NA,
             lwd = .1) + 
-  scale_fill_distiller(palette = "RdBu", limit = c(-2.5, 2.5)) +
+  scale_fill_distiller(palette = "PuOr", limit = c(-2.5, 2.5)) +
   geom_sf(data = states_geo, fill = NA, color = "grey", size = 0.5) +
-  labs(fill = "Intensity EHE") +
+  labs(fill = "EHE Intensity Coefficient") +
   theme_void() + 
   theme(legend.position = "bottom")
 ```
 
 #### Extreme Cold Events
 
-```{r}
+```{r, warning = FALSE}
 county_cold_intensity <- dat_table %>%
   filter(event_type == "Extreme Cold Event") %>%
   group_by(GEOID,NAME, STATE_NAME, year_numerical) %>%
@@ -217,7 +217,7 @@ hist(slopes_ece$r_squared)
 
 #### Map
 
-```{r}
+```{r, warning = FALSE}
 #slopes_ece_cut = slopes_ece %>% filter(p_value < 0.05)
 # Merge with geometry data
 county_boundaris_ece_catalog <- merge(counties_geo,
@@ -232,9 +232,9 @@ ggplot() +
   geom_sf(data = county_boundaris_ece_catalog,
             aes(fill = slope), color = NA,
             lwd = .1) + 
-  scale_fill_distiller(palette = "RdBu", limit = c(-3.75, 3.75)) +
+  scale_fill_distiller(palette = "PuOr", limit = c(-3.75, 3.75)) +
   geom_sf(data = states_geo, fill = NA, color = "grey", size = 0.5) +
-  labs(fill = "Intensity ECE") +
+  labs(fill = "ECE Intensity Coefficient") +
   theme_void() + 
   theme(legend.position = "bottom")
 ```
