--- a/EHCE_blog/scipts/Observation/area_obs.qmd
+++ b/EHCE_blog/scipts/Observation/area_obs.qmd
@@ -46,6 +46,8 @@ dat <- readRDS(dat_path)[[1]]
 
 ```{r}
 dat_table = dat %>%  st_drop_geometry()
+dat_table = dat_table %>% 
+  filter(!(event_type == "Extreme Cold Event" & month_numerical %in% 5:9))
 
 ## Overall
 county_yearly_area_hectare = dat_table %>%
