--- a/EHCE_blog/scipts/Observation/season_obs.qmd
+++ b/EHCE_blog/scipts/Observation/season_obs.qmd
@@ -46,6 +46,8 @@ dat <- readRDS(dat_path)[[1]]
 
 ```{r}
 dat_table = dat %>%  st_drop_geometry()
+dat_table = dat_table %>% 
+  filter(!(event_type == "Extreme Cold Event" & month_numerical %in% 5:9))
 dat_ehe_season = dat_table %>% filter(event_type == 'Extreme Heat Event') %>%
   dplyr::select(GEOID, NAME, STUSPS, STATE_NAME, 
          event_date, event_type, avg_intensity, year_numerical, 
